[new]お問い合わせ完了ページとプロダクト詳細ページのPC版スタイリング

--- a/completed.html
+++ b/completed.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
-  <body class="l-body">
+  <body class="l-body l-completed">
     <header class="l-header">
       <a href="/" class="l-header__logo">
         <img src="/assets/img/logo/logo.png" />
@@ -39,19 +39,19 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="p-completed">
       <div class="c-title">
         <h2 class="c-title__main">Completed</h2>
         <p class="c-title__sub">完了</p>
       </div>
       <!-- .c-title -->
-      <div>
+      <div class="p-completed__text">
         <p>お問い合わせ内容の送信が完了しました。</p>
         <p>内容を確認の上、ご返信させていただきますのでお待ちください。</p>
       </div>
-      <a href="/"><button class="c-button">Back</button></a>
+      <a href="/" class="p-completed__link"><button class="c-button">Back</button></a>
     </main>
-    <footer class="l-footer">
+    <footer class="l-footer p-completed__footer">
       <div class="l-footer__inner">
         <a href="/" class="l-footer__logo">
           <figure>
