--- a/products/corporate.html
+++ b/products/corporate.html
@@ -39,7 +39,94 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="p-products">
+      <div class="p-products__header">
+        <figure class="p-products__header-img">
+          <img src="/assets/img/images/fictitious_hp.png" />
+        </figure>
+        <p class="p-products__header-title">架空のコーポレートサイト</p>
+        <p class="p-products__header-skill">HTML | SCSS | jQuery</p>
+      </div>
+      <!-- .p-products__header -->
+
+      <div class="p-products__context">
+        <ul>
+          <li>内容：架空のコーポレートサイト制作</li>
+          <li>制作期間：2週間</li>
+          <li>
+            URL：<a
+              href="https://web-production-practice.vercel.app/"
+              target="_blank"
+              class="p-products__link"
+              >https://web-production-practice.vercel.app/</a
+            >
+          </li>
+        </ul>
+      </div>
+      <!-- .p-products__context -->
+
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">概要</h2>
+        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>
+          <a
+            class="p-products__detail-link"
+            href="https://web-production-practice.vercel.app/"
+            target="_blank"
+            >こちら</a
+          >から実際の制作物を確認できます。
+        </p>
+      </div>
+      <!-- .p-products__detail -->
+
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">コード</h2>
+        <p>Git hubリポジトリURLは以下になります。</p>
+        <a
+          href="https://github.com/kobarihirono/webProduction_practice"
+          target="_blank"
+          class="p-products__link"
+          >https://github.com/kobarihirono/webProduction_practice</a
+        >
+      </div>
+      <!-- .p-products__detail -->
+
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">デザイン</h2>
+        <p>サイトデザインは以下URLの上級編より引用しております。</p>
+        <a
+          href="https://webdesigner-go.com/coding-practice/"
+          target="_blank"
+          class="p-products__link"
+          >https://webdesigner-go.com/coding-practice/</a
+        >
+      </div>
+      <!-- .p-products__detail -->
+
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">使用技術</h2>
+        <ul>
+          <li>使用言語：HTML | CSS | jQuery</li>
+          <li>エディタ：VisualStudio Code</li>
+          <li>デザインツール：figma</li>
+          <li>ホスティング：Vercel</li>
+        </ul>
+      </div>
+      <!-- .p-products__detail -->
+
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">振り返り</h2>
+        <p>
+          テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          テキストテキストテキストテキストテキストテキスト
+        </p>
+      </div>
+      <!-- .p-products__detail -->
+      
+      <a href="/" class="p-products__back"
+        ><button class="c-button">Back</button></a
+      >
+    </main>
     <footer class="l-footer">
       <div class="l-footer__inner">
         <a href="/" class="l-footer__logo">
