--- a/products/portfolio.html
+++ b/products/portfolio.html
@@ -39,42 +39,66 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <div class="">
-        <figure class="">
+    <main class="p-products">
+      <div class="p-products__header">
+        <figure class="p-products__header-img">
           <img src="/assets/img/images/portfolio.png" />
         </figure>
-        <p class="">ポートフォリオサイト</p>
-        <p class="">HTML | SCSS | Javascript | jQuery</p>
+        <p class="p-products__header-title">ポートフォリオサイト</p>
+        <p class="p-products__header-skill">
+          HTML | SCSS | Javascript | jQuery
+        </p>
       </div>
-      <!-- . -->
+      <!-- .p-products__header -->
 
-      <div>
+      <div class="p-products__context">
         <ul>
           <li>内容：自己紹介のポートフォリオ作成</li>
           <li>制作期間：1週間</li>
-          <li>URL：https://github.com/kobarihirono/webProduction_practice</li>
+          <li>
+            URL：<a href="#" target="_blank" class="p-products__link"
+              >https://github.com/kobarihirono/webProduction_practice</a
+            >
+          </li>
         </ul>
       </div>
-      <!-- . -->
+      <!-- .p-products__context -->
 
-      <div>
+      <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>テキストテキストテキストテキストテキストテキスト</p>
-        <p><a href="#">こちら</a>から実際の制作物を確認できます。</p>
+        <p>
+          <a class="p-products__detail-link" href="/" target="_blank">こちら</a
+          >から実際の制作物を確認できます。
+        </p>
       </div>
-      <!-- . -->
+      <!-- .p-products__detail -->
 
-      <div>
+      <div class="p-products__detail">
         <h2 class="c-showTitle">コード</h2>
         <p>Git hubリポジトリURLは以下になります。</p>
-        <a href="https://github.com/kobarihirono/portfolio" target="_blank"
+        <a
+          href="https://github.com/kobarihirono/portfolio"
+          target="_blank"
+          class="p-products__link"
           >https://github.com/kobarihirono/portfolio</a
         >
       </div>
-      <!-- . -->
+      <!-- .p-products__detail -->
 
-      <div>
+      <div class="p-products__detail">
+        <h2 class="c-showTitle">デザイン</h2>
+        <p>figmaのデザインURLは以下になります。</p>
+        <a
+          href="https://www.figma.com/file/gdlPUcr0R01xY08K3X59Ad/Portfolio-Website?type=design&node-id=0%3A1&mode=design&t=otULuGjqYkoHZhBM-1"
+          target="_blank"
+          class="p-products__link"
+          >https://www.figma.com/file/gdlPUcr0R01xY08K3X59Ad/Portfolio-Website?type=design&node-id=0%3A1&mode=design&t=otULuGjqYkoHZhBM-1</a
+        >
+      </div>
+      <!-- .p-products__detail -->
+
+      <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | CSS | Javascript</li>
@@ -83,16 +107,20 @@
           <li>ホスティング：Vercel</li>
         </ul>
       </div>
-      <!-- . -->
+      <!-- .p-products__detail -->
 
-      <div>
+      <div class="p-products__detail">
         <h2 class="c-showTitle">振り返り</h2>
         <p>
           テキストテキストテキストテキストテキストテキストテキストテキストテキスト
           テキストテキストテキストテキストテキストテキスト
         </p>
       </div>
-      <!-- . -->
+      <!-- .p-products__detail -->
+
+      <a href="/" class="p-products__back"
+        ><button class="c-button">Back</button></a
+      >
     </main>
     <footer class="l-footer">
       <div class="l-footer__inner">
