[new]PC版スタイリングとフォームバリデーションの実装

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           name="form1"
           enctype="multipart/form-data"
           accept-charset="UTF-8"
+          id="js-form"
         >
           <input type="hidden" name="key" value="0c1e04d5816435" />
 
