--- a/about.html
+++ b/about.html
@@ -39,77 +39,101 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section class="p-about-about">
+    <main class="p-about">
+      <section class="p-about__about">
         <div class="c-title">
           <h2 class="c-title__main">ABOUT</h2>
           <p class="c-title__sub">私について</p>
         </div>
-        <div>
+        <div class="p-about__about-context">
           <p>エンジニアを目指して勉強中の24歳です。</p>
-          <p>
+          <p class="p-about__about-context-text">
             出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。新しいことを学ぶことが大好きで、常にわくわくできるものを探しています。
           </p>
-          <p>
+          <p class="p-about__about-context-text">
             趣味は書道と展覧会巡り、たくさん食べることです。特にラーメンが大好きで、休日は美術館とラーメン屋を巡ることが多いです。
           </p>
         </div>
-        <figure class="p-about-header">
+        <figure class="p-about__about-img">
           <img src="/assets/img/images/about.png" />
         </figure>
       </section>
 
-      <section>
-        <div class="c-title">
+      <section class="p-about__skill">
+        <div class="c-title p-about-skill-title">
           <h2 class="c-title__main">SKILL</h2>
           <p class="c-title__sub">学習していること</p>
         </div>
-        <figure class="p-about-skill">
-          <img src="/assets/img/images/skill.png" />
-        </figure>
-        <div>
-          <p>フロントエンドを中心に学習しています。</p>
-          <p>CSSとJavascriptが好きです。</p>
-          <ul>
-            <li>言語：HTML. CSS SCSS Javascript Typescript PHP SQL</li>
-            <li>ライブラリ：React MUI</li>
-            <li>フレームワーク：jQuery Next.js Laravel</li>
-            <li>CMS：WordPress</li>
-            <li>デザインツール：figma</li>
-          </ul>
+        <div class="p-about__skill-inner">
+          <figure class="p-about__skill-img">
+            <img src="/assets/img/images/skill.png" />
+          </figure>
+          <div class="p-about__skill-context">
+            <p>
+              フロントエンドを中心に学習しています。<br />CSSとJavascriptが好きです。
+            </p>
+            <ul class="p-about__skill-context-list">
+              <li class="p-about__skill-context-list-item">
+                言語：HTML CSS SCSS Javascript Typescript PHP SQL
+              </li>
+              <li class="p-about__skill-context-list-item">
+                ライブラリ：React MUI
+              </li>
+              <li class="p-about__skill-context-list-item">
+                フレームワーク：jQuery Next.js Laravel
+              </li>
+              <li class="p-about__skill-context-list-item">CMS：WordPress</li>
+              <li class="p-about__skill-context-list-item">
+                デザインツール：figma
+              </li>
+            </ul>
+          </div>
+          <!-- .p-about__skill-context -->
         </div>
       </section>
 
-      <section>
+      <section class="p-about__career">
         <div class="c-title">
           <h2 class="c-title__main">CAREER</h2>
           <p class="c-title__sub">今までのこと</p>
         </div>
-        <ol>
-          <li>2018/03</li>
-          <li>2022/03</li>
-          <li>2022/12</li>
-          <li>2023/06</li>
-          <li>現在</li>
-        </ol>
-        <ol>
-          <li>
-            岩手県立水沢高等学校を卒業。大学進学のため宮城県仙台市に移住。
-          </li>
-          <li>
-            大学では植物遺伝学を専攻し、研究に励む。四年次には東北植物学会で入賞。<br />
-            宮城大学・食産業学群・食資源開発学類卒業後、就職のため埼玉県に移住。
-          </li>
-          <li>
-            WebGLに興味を持ち、Three.jsライブラリを使うとJavaScriptの知識だけで3Dコンテンツを作成できることを知る。
-            自分で何か作ってみたいと思い、プログラミング学習を始める。
-          </li>
-          <li>エンジニアになるべく、現在の会社に入社。</li>
-          <li>
-            フロントエンドエンジニアの研修を受講。<br />
-            現在は案件先への配属前の待機中、受託業務に従事。Web制作の実装/テストを担当する。
-          </li>
-        </ol>
+        <div class="p-about__career-timeline">
+          <ol class="p-about__career-timeline-list">
+            <li class="p-about__career-timeline-list-item">
+              <div class="p-about__career-timeline-list-item-date">2018/03</div>
+              <div class="p-about__career-timeline-list-item-text">
+                岩手県立水沢高等学校を卒業。大学進学のため宮城県仙台市に移住。
+              </div>
+            </li>
+            <li class="p-about__career-timeline-list-item">
+              <div class="p-about__career-timeline-list-item-date">2022/03</div>
+              <div class="p-about__career-timeline-list-item-text">
+                大学では植物遺伝学を専攻し、研究に励む。四年次には東北植物学会で入賞。<br />
+                宮城大学・食産業学群・食資源開発学類卒業後、就職のため埼玉県に移住。
+              </div>
+            </li>
+            <li class="p-about__career-timeline-list-item">
+              <div class="p-about__career-timeline-list-item-date">2022/12</div>
+              <div class="p-about__career-timeline-list-item-text">
+                WebGLに興味を持ち、Three.jsライブラリを使うとJavaScriptの知識だけで3Dコンテンツを作成できることを知る。<br />
+                自分で何か作ってみたいと思い、プログラミング学習を始める。
+              </div>
+            </li>
+            <li class="p-about__career-timeline-list-item">
+              <div class="p-about__career-timeline-list-item-date">2023/06</div>
+              <div class="p-about__career-timeline-list-item-text">
+                エンジニアになるべく、現在の会社に入社。
+              </div>
+            </li>
+            <li class="p-about__career-timeline-list-item">
+              <div class="p-about__career-timeline-list-item-date">現在</div>
+              <div class="p-about__career-timeline-list-item-text">
+                フロントエンドエンジニアの研修を受講。現在は案件先への配属前の待機中に受託業務に従事。<br />
+                Web制作の実装/テストを担当する。
+              </div>
+            </li>
+          </ol>
+        </div>
       </section>
     </main>
     <footer class="l-footer">
