[new]ハンバーガーメニューの実装

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
           </li>
         </ul>
       </nav>
+
+      <div class="l-hamburger" id="js-hamburger">
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+      </div>
+      <!-- .l-hamburger -->
+      <div class="l-hamburger-nav" id="js-hamburgerNav">
+        <nav class="l-header__nav l-hamburger-nav__wrap">
+          <ul class="l-header__nav-list l-hamburger-nav__list">
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#product">PRODUCT</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- .l-hamburger-nav -->
     </header>
     <main class="l-main p-index">
       <div class="p-index-header">
@@ -223,5 +240,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
     <script src="/assets/js/validation.js"></script>
+    <script src="/assets/js/hambuger.js"></script>
   </body>
 </html>
