[new]トップページSP版

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           This is Hirono Kobari's<br />
           Portfolio Website.
         </h1>
-        <div class="c-typing">
+        <div class="c-typing p-index-header__typing">
           <p class="p-index-header__sub-title c-typing-effect">
             I'm a growing engineer.
           </p>
@@ -73,7 +73,7 @@
       </div>
       <!-- .p-sub-header -->
 
-      <section id="about" class="p-index-about">
+      <section id="about" class="p-index-about l-section">
         <div class="c-title">
           <h2 class="c-title__main">ABOUT</h2>
           <p class="c-title__sub">私について</p>
@@ -91,7 +91,7 @@
         </div>
       </section>
 
-      <section id="product" class="p-index-product">
+      <section id="product" class="p-index-product l-section">
         <div class="c-title p-index-product__title">
           <h2 class="c-title__main">PRODUCT</h2>
           <p class="c-title__sub">制作物</p>
@@ -144,7 +144,7 @@
         </div>
       </section>
 
-      <section id="contact" class="p-index-contact">
+      <section id="contact" class="p-index-contact l-section">
         <div class="c-title">
           <h2 class="c-title__main">CONTACT</h2>
           <p class="c-title__sub">お問い合わせ</p>
@@ -230,6 +230,18 @@
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#product">PRODUCT</a></li>
             <li><a href="#contact">CONTACT</a></li>
+          </ul>
+          <ul class="l-footer__nav-icons">
+            <li>
+              <a href="https://github.com/kobarihirono" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+              /></a>
+            </li>
+            <li>
+              <a href="https://qiita.com/kobari_h" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+              /></a>
+            </li>
           </ul>
         </nav>
       </div>
