[new]その他ページのSP版の実装

--- a/products/portfolio.html
+++ b/products/portfolio.html
@@ -55,11 +55,6 @@
         <ul>
           <li>内容：自己紹介のポートフォリオ作成</li>
           <li>制作期間：1週間</li>
-          <li>
-            URL：<a href="#" target="_blank" class="p-products__link"
-              >https://github.com/kobarihirono/webProduction_practice</a
-            >
-          </li>
         </ul>
       </div>
       <!-- .p-products__context -->
@@ -76,25 +71,27 @@
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">コード</h2>
-        <p>Git hubリポジトリURLは以下になります。</p>
-        <a
-          href="https://github.com/kobarihirono/portfolio"
-          target="_blank"
-          class="p-products__link"
-          >https://github.com/kobarihirono/portfolio</a
-        >
+        <p>
+          Git hubリポジトリは<a
+            class="p-products__detail-link"
+            href="https://github.com/kobarihirono/portfolio"
+            target="_blank"
+            >こちら</a
+          >から確認できます。
+        </p>
       </div>
       <!-- .p-products__detail -->
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">デザイン</h2>
-        <p>figmaのデザインURLは以下になります。</p>
-        <a
-          href="https://www.figma.com/file/gdlPUcr0R01xY08K3X59Ad/Portfolio-Website?type=design&node-id=0%3A1&mode=design&t=otULuGjqYkoHZhBM-1"
-          target="_blank"
-          class="p-products__link"
-          >https://www.figma.com/file/gdlPUcr0R01xY08K3X59Ad/Portfolio-Website?type=design&node-id=0%3A1&mode=design&t=otULuGjqYkoHZhBM-1</a
-        >
+        <p>
+          figmaデザインは<a
+            class="p-products__detail-link"
+            href="https://www.figma.com/file/gdlPUcr0R01xY08K3X59Ad/Portfolio-Website?type=design&node-id=0%3A1&mode=design&t=otULuGjqYkoHZhBM-1"
+            target="_blank"
+            >こちら</a
+          >から確認できます。
+        </p>
       </div>
       <!-- .p-products__detail -->
 
