[fix]ファビコンの設定

--- a/products/corporate.html
+++ b/products/corporate.html
@@ -53,14 +53,6 @@
         <ul>
           <li>内容：架空のコーポレートサイト制作</li>
           <li>制作期間：2週間</li>
-          <li>
-            URL：<a
-              href="https://web-production-practice.vercel.app/"
-              target="_blank"
-              class="p-products__link"
-              >https://web-production-practice.vercel.app/</a
-            >
-          </li>
         </ul>
       </div>
       <!-- .p-products__context -->
@@ -81,25 +73,28 @@
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">コード</h2>
-        <p>Git hubリポジトリURLは以下になります。</p>
-        <a
-          href="https://github.com/kobarihirono/webProduction_practice"
-          target="_blank"
-          class="p-products__link"
-          >https://github.com/kobarihirono/webProduction_practice</a
-        >
+        <p>
+          Git hubリポジトリは<a
+            class="p-products__detail-link"
+            href="https://github.com/kobarihirono/webProduction_practice"
+            target="_blank"
+            >こちら</a
+          >
+          から確認できます。
+        </p>
       </div>
       <!-- .p-products__detail -->
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">デザイン</h2>
-        <p>サイトデザインは以下URLの上級編より引用しております。</p>
-        <a
-          href="https://webdesigner-go.com/coding-practice/"
-          target="_blank"
-          class="p-products__link"
-          >https://webdesigner-go.com/coding-practice/</a
-        >
+        <p>
+          サイトデザインは<a
+            class="p-products__detail-link"
+            href="https://webdesigner-go.com/coding-practice/"
+            target="_blank"
+            >こちら</a
+          >の上級編より引用しております。
+        </p>
       </div>
       <!-- .p-products__detail -->
 
@@ -122,7 +117,7 @@
         </p>
       </div>
       <!-- .p-products__detail -->
-      
+
       <a href="/" class="p-products__back"
         ><button class="c-button">Back</button></a
       >
