--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="" sizes="192x192" />
+    <link rel="icon" type="image/png" href="/assets/img/logo/logo.png" sizes="192x192" />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
