[new]共通部分の共有

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="" sizes="192x192" />
+    <link rel="icon" type="image/png" href="/assets/img/logo/logo.png" sizes="192x192" />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
@@ -21,9 +21,9 @@
       </a>
       <nav class="l-header__nav">
         <ul class="l-header__nav-list">
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="index.html#about">ABOUT</a></li>
+          <li><a href="index.html#product">PRODUCT</a></li>
+          <li><a href="index.html#contact">CONTACT</a></li>
         </ul>
         <ul class="l-header__nav-icons">
           <li>
@@ -48,9 +48,9 @@
       <div class="l-hamburger-nav" id="js-hamburgerNav">
         <nav class="l-header__nav l-hamburger-nav__wrap">
           <ul class="l-header__nav-list l-hamburger-nav__list">
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#product">PRODUCT</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html#about">ABOUT</a></li>
+            <li><a href="index.html#product">PRODUCT</a></li>
+            <li><a href="index.html#contact">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -94,7 +94,7 @@
                 言語：HTML CSS SCSS Javascript Typescript PHP SQL
               </li>
               <li class="p-about__skill-context-list-item">
-                ライブラリ：React MUI
+                ライブラリ：React Tailwind CSS
               </li>
               <li class="p-about__skill-context-list-item">
                 フレームワーク：jQuery Next.js Laravel
@@ -132,20 +132,20 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2022/12</div>
               <div class="p-about__career-timeline-list-item-text">
-                WebGLに興味を持ち、Three.jsライブラリを使うとJavaScriptの知識だけで3Dコンテンツを作成できることを知る。<br />
+                WebGLに興味を持ち、JavaScriptライブラリで3Dコンテンツを作成できることを知る。<br />
                 自分で何か作ってみたいと思い、プログラミング学習を始める。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2023/06</div>
               <div class="p-about__career-timeline-list-item-text">
-                エンジニアになるべく、現在の会社に入社。
+                エンジニアになることを決意、現在の会社に入社。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">現在</div>
               <div class="p-about__career-timeline-list-item-text">
-                フロントエンドエンジニアの研修を受講。現在は案件先への配属前の待機中に受託業務に従事。<br />
+                フロントエンドエンジニアの研修を修了。<br />現在は案件先への配属前の待機中に社内受託業務に従事し、
                 Web制作の実装/テストを担当する。
               </div>
             </li>
@@ -163,9 +163,9 @@
         </a>
         <nav class="l-footer__nav">
           <ul class="l-footer__nav-list">
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#product">PRODUCT</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="index.html#about">ABOUT</a></li>
+            <li><a href="index.htmlindex.htmlindex.html#product">PRODUCT</a></li>
+            <li><a href="index.htmlindex.htmlindex.html#contact">CONTACT</a></li>
           </ul>
           <ul class="l-footer__nav-icons">
             <li>
