--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           <!-- .c-productCard -->
           <div class="c-productCard">
-            <a href="#" class="c-productCard__img">
+            <a href="/products/readscale.html" class="c-productCard__img">
               <img src="/assets/img/images/dummy.png" />
             </a>
             <p class="c-productCard__title">Read Scale</p>
