--- a/products/corporate.html
+++ b/products/corporate.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="" sizes="192x192" />
+    <link rel="icon" type="image/png" href="/assets/img/logo/logo.png" sizes="192x192" />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
@@ -21,9 +21,9 @@
       </a>
       <nav class="l-header__nav">
         <ul class="l-header__nav-list">
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="/index.html#about">ABOUT</a></li>
+          <li><a href="/index.html#product">PRODUCT</a></li>
+          <li><a href="/index.html#contact">CONTACT</a></li>
         </ul>
         <ul class="l-header__nav-icons">
           <li>
@@ -38,6 +38,22 @@
           </li>
         </ul>
       </nav>
+      <div class="l-hamburger" id="js-hamburger">
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+      </div>
+      <!-- .l-hamburger -->
+      <div class="l-hamburger-nav" id="js-hamburgerNav">
+        <nav class="l-header__nav l-hamburger-nav__wrap">
+          <ul class="l-header__nav-list l-hamburger-nav__list">
+            <li><a href="/index.html#about">ABOUT</a></li>
+            <li><a href="/index.html#product">PRODUCT</a></li>
+            <li><a href="/index.html#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- .l-hamburger-nav -->
     </header>
     <main class="p-products">
       <div class="p-products__header">
@@ -59,7 +75,9 @@
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
-        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>
+          架空のコーポレートサイトです。SCSSとjQueryの練習を主な目的とし、ボトムアップ形式で開発を行いました。
+        </p>
         <p>
           <a
             class="p-products__detail-link"
@@ -79,8 +97,7 @@
             href="https://github.com/kobarihirono/webProduction_practice"
             target="_blank"
             >こちら</a
-          >
-          から確認できます。
+          >から確認できます。
         </p>
       </div>
       <!-- .p-products__detail -->
@@ -109,15 +126,6 @@
       </div>
       <!-- .p-products__detail -->
 
-      <div class="p-products__detail">
-        <h2 class="c-showTitle">振り返り</h2>
-        <p>
-          テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          テキストテキストテキストテキストテキストテキスト
-        </p>
-      </div>
-      <!-- .p-products__detail -->
-
       <a href="/" class="p-products__back"
         ><button class="c-button">Back</button></a
       >
@@ -132,9 +140,25 @@
         </a>
         <nav class="l-footer__nav">
           <ul class="l-footer__nav-list">
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">PRODUCT</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="/index.html#about">ABOUT</a></li>
+            <li>
+              <a href="/index.htmlindex.htmlindex.html#product">PRODUCT</a>
+            </li>
+            <li>
+              <a href="/index.htmlindex.htmlindex.html#contact">CONTACT</a>
+            </li>
+          </ul>
+          <ul class="l-footer__nav-icons">
+            <li>
+              <a href="https://github.com/kobarihirono" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+              /></a>
+            </li>
+            <li>
+              <a href="https://qiita.com/kobari_h" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+              /></a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -142,5 +166,7 @@
         &copy; 2024 hirono kobari. All Rights Reserved.
       </p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/assets/js/hambuger.js"></script>
   </body>
 </html>
