--- a/products/threeJs.html
+++ b/products/threeJs.html
@@ -10,7 +10,12 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="" sizes="192x192" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/img/logo/logo.png"
+      sizes="192x192"
+    />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
@@ -21,9 +26,9 @@
       </a>
       <nav class="l-header__nav">
         <ul class="l-header__nav-list">
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#product">PRODUCT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="/index.html#about">ABOUT</a></li>
+          <li><a href="/index.html#product">PRODUCT</a></li>
+          <li><a href="/index.html#contact">CONTACT</a></li>
         </ul>
         <ul class="l-header__nav-icons">
           <li>
@@ -38,6 +43,22 @@
           </li>
         </ul>
       </nav>
+      <div class="l-hamburger" id="js-hamburger">
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+        <div class="l-hamburger__bar"></div>
+      </div>
+      <!-- .l-hamburger -->
+      <div class="l-hamburger-nav" id="js-hamburgerNav">
+        <nav class="l-header__nav l-hamburger-nav__wrap">
+          <ul class="l-header__nav-list l-hamburger-nav__list">
+            <li><a href="/index.html#about">ABOUT</a></li>
+            <li><a href="/index.html#product">PRODUCT</a></li>
+            <li><a href="/index.html#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- .l-hamburger-nav -->
     </header>
     <main class="p-products">
       <div class="p-products__header">
@@ -52,14 +73,14 @@
       <div class="p-products__context">
         <ul>
           <li>内容：Three.jsで3D技術を学ぶ</li>
-          <li>制作期間：2日</li>
+          <li>制作期間：定めなし</li>
         </ul>
       </div>
       <!-- .p-products__context -->
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
-        <p>テキストテキストテキストテキストテキストテキスト</p>
+        <p>Three.jsで制作したものをまとめていきます。</p>
         <p>
           <a
             class="p-products__detail-link"
@@ -84,33 +105,12 @@
       <!-- .p-products__detail -->
 
       <div class="p-products__detail">
-        <h2 class="c-showTitle">デザイン</h2>
-        <p>サイトデザインは以下URLの上級編より引用しております。</p>
-        <a
-          href="https://webdesigner-go.com/coding-practice/"
-          target="_blank"
-          class="p-products__link"
-          >https://webdesigner-go.com/coding-practice/</a
-        >
-      </div>
-      <!-- .p-products__detail -->
-
-      <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | CSS | Javascript | Three.js</li>
           <li>エディタ：VisualStudio Code</li>
           <li>ホスティング：Vercel</li>
         </ul>
-      </div>
-      <!-- .p-products__detail -->
-
-      <div class="p-products__detail">
-        <h2 class="c-showTitle">振り返り</h2>
-        <p>
-          テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          テキストテキストテキストテキストテキストテキスト
-        </p>
       </div>
       <!-- .p-products__detail -->
       
@@ -128,9 +128,25 @@
         </a>
         <nav class="l-footer__nav">
           <ul class="l-footer__nav-list">
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">PRODUCT</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="/index.html#about">ABOUT</a></li>
+            <li>
+              <a href="/index.htmlindex.htmlindex.html#product">PRODUCT</a>
+            </li>
+            <li>
+              <a href="/index.htmlindex.htmlindex.html#contact">CONTACT</a>
+            </li>
+          </ul>
+          <ul class="l-footer__nav-icons">
+            <li>
+              <a href="https://github.com/kobarihirono" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+              /></a>
+            </li>
+            <li>
+              <a href="https://qiita.com/kobari_h" target="_blank"
+                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+              /></a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -138,5 +154,7 @@
         &copy; 2024 hirono kobari. All Rights Reserved.
       </p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/assets/js/hambuger.js"></script>
   </body>
 </html>
