[fix]プロダクトURLの修正

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <h3 class="p-index-about__title">Better and more enjoyable.</h3>
         <div class="p-index-about__text-wrap">
           <div class="p-index-about__text">
-            <p>テキストテキストテキストテキスト</p>
-            <p>テキストテキストテキストテキストテキストテキスト</p>
+            <p>わくわくするものをつくりたい、</p>
+            <p>そんな気持ちからエンジニアを目指しました。</p>
             <p>
-              テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              これからも地道に努力を続け、技術力の充実に励みます。
             </p>
           </div>
           <a href="about.html"><button class="c-button">More</button></a>
