--- a/products/threeJs.html
+++ b/products/threeJs.html
@@ -66,7 +66,9 @@
           <img src="/assets/img/images/threeJs.png" />
         </figure>
         <p class="p-products__header-title">Three.jsで遊ぶ</p>
-        <p class="p-products__header-skill">HTML | CSS | Javascript | Three.js</p>
+        <p class="p-products__header-skill">
+          HTML | CSS | Javascript | Three.js
+        </p>
       </div>
       <!-- .p-products__header -->
 
@@ -82,11 +84,7 @@
         <h2 class="c-showTitle">概要</h2>
         <p>Three.jsで制作したものをまとめていきます。</p>
         <p>
-          <a
-            class="p-products__detail-link"
-            href="https://web-production-practice.vercel.app/"
-            target="_blank"
-            >こちら</a
+          <a class="p-products__detail-link" href="#" target="_blank">こちら</a
           >から実際の制作物を確認できます。
         </p>
       </div>
@@ -94,13 +92,14 @@
 
       <div class="p-products__detail">
         <h2 class="c-showTitle">コード</h2>
-        <p>Git hubリポジトリURLは以下になります。</p>
-        <a
-          href="https://github.com/kobarihirono/webProduction_practice"
-          target="_blank"
-          class="p-products__link"
-          >https://github.com/kobarihirono/webProduction_practice</a
-        >
+        <p>
+          Git hubリポジトリURLは<a
+            class="p-products__detail-link"
+            href="#"
+            target="_blank"
+            >こちら</a
+          >になります。
+        </p>
       </div>
       <!-- .p-products__detail -->
 
@@ -113,7 +112,7 @@
         </ul>
       </div>
       <!-- .p-products__detail -->
-      
+
       <a href="/" class="p-products__back"
         ><button class="c-button">Back</button></a
       >
