[new]新規プロダクトの追加とフッターの画像読み込みの修正

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <a href="#" class="c-productCard__img">
               <img src="/assets/img/images/dummy.png" />
             </a>
-            <p class="c-productCard__title">Coming soon...</p>
-            <p class="c-productCard__skill">???</p>
+            <p class="c-productCard__title">Homete!</p>
+            <p class="c-productCard__skill">HTML | Tailwind CSS | Next.js | Firebase</p>
           </div>
           <!-- .c-productCard -->
         </div>
@@ -234,12 +234,12 @@
           <ul class="l-footer__nav-icons">
             <li>
               <a href="https://github.com/kobarihirono" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
               /></a>
             </li>
             <li>
               <a href="https://qiita.com/kobari_h" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
               /></a>
             </li>
           </ul>
