--- a/products/portfolio.html
+++ b/products/portfolio.html
@@ -32,13 +32,13 @@
         </ul>
         <ul class="l-header__nav-icons">
           <li>
-            <a href="https://github.com/kobarihirono"
-              ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+            <a href="https://github.com/kobarihirono" target="_blank"
+              ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
             /></a>
           </li>
           <li>
-            <a href="https://qiita.com/kobari_h"
-              ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+            <a href="https://qiita.com/kobari_h" target="_blank"
+              ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
             /></a>
           </li>
         </ul>
@@ -156,12 +156,12 @@
           <ul class="l-footer__nav-icons">
             <li>
               <a href="https://github.com/kobarihirono" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
               /></a>
             </li>
             <li>
               <a href="https://qiita.com/kobari_h" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
               /></a>
             </li>
           </ul>
