--- a/products/homete.html
+++ b/products/homete.html
@@ -10,7 +10,12 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="/assets/img/logo/logo.png" sizes="192x192" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/img/logo/logo.png"
+      sizes="192x192"
+    />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>My Portfolio</title>
   </head>
@@ -58,17 +63,19 @@
     <main class="p-products">
       <div class="p-products__header">
         <figure class="p-products__header-img">
-          <img src="/assets/img/images/fictitious_hp.png" />
+          <img src="/assets/img/images/dummy.png" />
         </figure>
-        <p class="p-products__header-title">架空のコーポレートサイト</p>
-        <p class="p-products__header-skill">HTML | SCSS | jQuery</p>
+        <p class="p-products__header-title">Read Scale</p>
+        <p class="p-products__header-skill">
+          HTML | Tailwind CSS | Next.js | Firebase
+        </p>
       </div>
       <!-- .p-products__header -->
 
       <div class="p-products__context">
         <ul>
-          <li>内容：架空のコーポレートサイト制作</li>
-          <li>制作期間：2週間</li>
+          <li>内容：Todoアプリ - Homete!</li>
+          <li>制作期間：1ヶ月想定</li>
         </ul>
       </div>
       <!-- .p-products__context -->
@@ -76,16 +83,13 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>
-          架空のコーポレートサイトです。SCSSとjQueryの練習を主な目的とし、ボトムアップ形式で開発を行いました。
+          タスク管理アプリHomete!は、タスクを完了するとAIが褒めてくれるアプリです。
+          アプリデザインから作成し、figmaを使用してデザインカンプを作成しました。
         </p>
-        <p>
-          <a
-            class="p-products__detail-link"
-            href="https://web-production-practice.vercel.app/"
-            target="_blank"
-            >こちら</a
+        <!-- <p>
+          <a class="p-products__detail-link" href="/" target="_blank">こちら</a
           >から実際の制作物を確認できます。
-        </p>
+        </p> -->
       </div>
       <!-- .p-products__detail -->
 
@@ -94,7 +98,7 @@
         <p>
           Git hubリポジトリは<a
             class="p-products__detail-link"
-            href="https://github.com/kobarihirono/webProduction_practice"
+            href="https://github.com/kobarihirono/Homete"
             target="_blank"
             >こちら</a
           >から確認できます。
@@ -105,12 +109,12 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">デザイン</h2>
         <p>
-          サイトデザインは<a
+          figmaデザインは<a
             class="p-products__detail-link"
-            href="https://webdesigner-go.com/coding-practice/"
+            href="https://www.figma.com/file/erDDYMYu8kURiRxqXTKvhO/Homete!?type=design&node-id=0%3A1&mode=design&t=QPF4IbiA4wtBIYmI-1"
             target="_blank"
             >こちら</a
-          >の上級編より引用しております。
+          >から確認できます。
         </p>
       </div>
       <!-- .p-products__detail -->
@@ -118,8 +122,12 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
-          <li>使用言語：HTML | CSS | jQuery</li>
-          <li>エディタ：VisualStudio Code</li>
+          <li>使用言語：HTML | CSS | Typescript</li>
+          <li>ライブラリ：React</li>
+          <li>フレームワーク：Next.js | Tailwind CSS</li>
+          <li>DB：Firestore</li>
+          <li>認証：Firebase Authentication</li>
+          <li>テスト：Jest | React Testing Library</li>
           <li>デザインツール：figma</li>
           <li>ホスティング：Vercel</li>
         </ul>
