--- a/products/readscale.html
+++ b/products/readscale.html
@@ -32,13 +32,13 @@
         </ul>
         <ul class="l-header__nav-icons">
           <li>
-            <a href="https://github.com/kobarihirono"
-              ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+            <a href="https://github.com/kobarihirono" target="_blank"
+              ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
             /></a>
           </li>
           <li>
-            <a href="https://qiita.com/kobari_h"
-              ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+            <a href="https://qiita.com/kobari_h" target="_blank"
+              ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
             /></a>
           </li>
         </ul>
@@ -67,7 +67,7 @@
         </figure>
         <p class="p-products__header-title">Read Scale</p>
         <p class="p-products__header-skill">
-          HTML | Tailwind CSS | Next.js | Firebase
+          HTML | MUI | Next.js | Firebase
         </p>
       </div>
       <!-- .p-products__header -->
@@ -123,7 +123,7 @@
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | CSS | Javascript</li>
-          <li>ライブラリ：Tailwind CSS | React</li>
+          <li>ライブラリ：MUI | React</li>
           <li>フレームワーク：Next.js</li>
           <li>外部API：Google Book API</li>
           <li>DB：Firestore</li>
@@ -160,12 +160,12 @@
           <ul class="l-footer__nav-icons">
             <li>
               <a href="https://github.com/kobarihirono" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/github.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Github.png"
               /></a>
             </li>
             <li>
               <a href="https://qiita.com/kobari_h" target="_blank"
-                ><img class="c-socialIcon" src="/assets/img/icon/qiita.png"
+                ><img class="c-socialIcon" src="/assets/img/icon/Qiita.png"
               /></a>
             </li>
           </ul>
