[fix]リンクの修正

--- a/products/corporate.html
+++ b/products/corporate.html
@@ -142,10 +142,10 @@
           <ul class="l-footer__nav-list">
             <li><a href="/index.html#about">ABOUT</a></li>
             <li>
-              <a href="/index.htmlindex.htmlindex.html#product">PRODUCT</a>
+              <a href="/index.html#product">PRODUCT</a>
             </li>
             <li>
-              <a href="/index.htmlindex.htmlindex.html#contact">CONTACT</a>
+              <a href="/index.html#contact">CONTACT</a>
             </li>
           </ul>
           <ul class="l-footer__nav-icons">
