--- a/products/homete.html
+++ b/products/homete.html
@@ -65,7 +65,7 @@
         <figure class="p-products__header-img">
           <img src="/assets/img/images/dummy.png" />
         </figure>
-        <p class="p-products__header-title">Read Scale</p>
+        <p class="p-products__header-title">Homete!</p>
         <p class="p-products__header-skill">
           HTML | Tailwind CSS | Next.js | Firebase
         </p>
@@ -74,7 +74,7 @@
 
       <div class="p-products__context">
         <ul>
-          <li>内容：Todoアプリ - Homete!</li>
+          <li>内容：タスク管理アプリ - Homete!</li>
           <li>制作期間：1ヶ月想定</li>
         </ul>
       </div>
@@ -129,7 +129,7 @@
           <li>認証：Firebase Authentication</li>
           <li>テスト：Jest | React Testing Library</li>
           <li>デザインツール：figma</li>
-          <li>ホスティング：Vercel</li>
+          <li>ホスティング：Firebase</li>
         </ul>
       </div>
       <!-- .p-products__detail -->
@@ -150,10 +150,10 @@
           <ul class="l-footer__nav-list">
             <li><a href="/index.html#about">ABOUT</a></li>
             <li>
-              <a href="/index.htmlindex.htmlindex.html#product">PRODUCT</a>
+              <a href="/index.html#product">PRODUCT</a>
             </li>
             <li>
-              <a href="/index.htmlindex.htmlindex.html#contact">CONTACT</a>
+              <a href="/index.html#contact">CONTACT</a>
             </li>
           </ul>
           <ul class="l-footer__nav-icons">
