--- a/completed.html
+++ b/completed.html
@@ -79,8 +79,8 @@
         <nav class="l-footer__nav">
           <ul class="l-footer__nav-list">
             <li><a href="index.html#about">ABOUT</a></li>
-            <li><a href="index.htmlindex.htmlindex.html#product">PRODUCT</a></li>
-            <li><a href="index.htmlindex.htmlindex.html#contact">CONTACT</a></li>
+            <li><a href="index.html#product">PRODUCT</a></li>
+            <li><a href="index.html#contact">CONTACT</a></li>
           </ul>
           <ul class="l-footer__nav-icons">
             <li>
