[fix]スキル内容の修正

--- a/about.html
+++ b/about.html
@@ -91,17 +91,20 @@
             </p>
             <ul class="p-about__skill-context-list">
               <li class="p-about__skill-context-list-item">
-                言語：HTML CSS SCSS Javascript Typescript PHP SQL
+                言語：HTML | CSS | SCSS | Javascript | Typescript | PHP | SQL
               </li>
               <li class="p-about__skill-context-list-item">
-                ライブラリ：React Tailwind CSS
+                ライブラリ：React | Tailwind CSS
               </li>
               <li class="p-about__skill-context-list-item">
-                フレームワーク：jQuery Next.js Laravel
+                フレームワーク：jQuery | Next.js | Laravel
               </li>
               <li class="p-about__skill-context-list-item">CMS：WordPress</li>
               <li class="p-about__skill-context-list-item">
                 デザインツール：figma
+              </li>
+              <li class="p-about__skill-context-list-item">
+                その他：Firebase | Github
               </li>
             </ul>
           </div>
@@ -153,6 +156,7 @@
         </div>
       </section>
     </main>
+
     <footer class="l-footer">
       <div class="l-footer__inner">
         <a href="/" class="l-footer__logo">
