[fix]非公開プロダクトのコメントアウト

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <p class="c-productCard__skill">HTML | SCSS | jQuery</p>
           </div>
           <!-- .c-productCard -->
-          <div class="c-productCard">
+
+          <!-- <div class="c-productCard">
             <a href="products/threeJs.html" class="c-productCard__img">
               <img src="/assets/img/images/threeJs.png" />
             </a>
@@ -123,8 +124,9 @@
             <p class="c-productCard__skill">
               HTML | CSS | Javascript | Three.js
             </p>
-          </div>
+          </div> -->
           <!-- .c-productCard -->
+          
           <div class="c-productCard">
             <a href="/products/readscale.html" class="c-productCard__img">
               <img src="/assets/img/images/dummy.png" />
