--- a/products/readscale.html
+++ b/products/readscale.html
@@ -122,9 +122,9 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
-          <li>使用言語：HTML | CSS | Javascript</li>
-          <li>ライブラリ：MUI | React</li>
-          <li>フレームワーク：Next.js</li>
+          <li>使用言語：HTML | CSS | Typescript</li>
+          <li>ライブラリ：React</li>
+          <li>フレームワーク：Next.js | Tailwind CSS</li>
           <li>外部API：Google Book API</li>
           <li>DB：Firestore</li>
           <li>認証：Firebase Authentication</li>
