[new]read-scaleの追加

--- a/index.html
+++ b/index.html
@@ -115,24 +115,13 @@
             <p class="c-productCard__skill">HTML | SCSS | jQuery</p>
           </div>
           <!-- .c-productCard -->
-
-          <!-- <div class="c-productCard">
-            <a href="products/threeJs.html" class="c-productCard__img">
-              <img src="/assets/img/images/threeJs.png" />
-            </a>
-            <p class="c-productCard__title">Three.jsで遊ぶ</p>
-            <p class="c-productCard__skill">
-              HTML | CSS | Javascript | Three.js
-            </p>
-          </div> -->
-          <!-- .c-productCard -->
           
           <div class="c-productCard">
             <a href="/products/readscale.html" class="c-productCard__img">
-              <img src="/assets/img/images/dummy.png" />
+              <img src="/assets/img/images/read-scale.png" />
             </a>
             <p class="c-productCard__title">Read Scale</p>
-            <p class="c-productCard__skill">HTML | MUI | Next.js | Firebase</p>
+            <p class="c-productCard__skill">HTML | Tailwind CSS | Next.js | Firebase</p>
           </div>
           <!-- .c-productCard -->
           <div class="c-productCard">
