--- a/products/readscale.html
+++ b/products/readscale.html
@@ -63,11 +63,11 @@
     <main class="p-products">
       <div class="p-products__header">
         <figure class="p-products__header-img">
-          <img src="/assets/img/images/dummy.png" />
+          <img src="/assets/img/images/read-scale.png" />
         </figure>
         <p class="p-products__header-title">Read Scale</p>
         <p class="p-products__header-skill">
-          HTML | MUI | Next.js | Firebase
+          HTML | Tailwind CSS | Next.js | Firebase
         </p>
       </div>
       <!-- .p-products__header -->
@@ -75,7 +75,7 @@
       <div class="p-products__context">
         <ul>
           <li>内容：読書管理アプリ - Read Scale</li>
-          <li>制作期間：2ヶ月想定</li>
+          <li>制作期間：1ヶ月</li>
         </ul>
       </div>
       <!-- .p-products__context -->
@@ -83,13 +83,13 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>
-          読書管理アプリ「Read Scale」は、読書の記録を残し、積み上げた本の高さをスケールで表現するサービスです。
+          読書管理アプリ「Read Scale」は、読書の記録を残し、積み上げた本の高さをスケールで表現するサービスです。<br />
           アプリデザインから作成し、figmaを使用してデザインカンプを作成しました。
         </p>
-        <!-- <p>
-          <a class="p-products__detail-link" href="/" target="_blank">こちら</a
+        <p>
+          <a class="p-products__detail-link" href="https://read-scale.vercel.app/" target="_blank">こちら</a
           >から実際の制作物を確認できます。
-        </p> -->
+        </p>
       </div>
       <!-- .p-products__detail -->
 
@@ -109,7 +109,7 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">デザイン</h2>
         <p>
-          figmaデザインは<a
+          figmaデザインと画面遷移図は<a
             class="p-products__detail-link"
             href="https://www.figma.com/file/I03ssWJsITenc7cu3pzURF/Read-Scale?type=design&node-id=0%3A1&mode=design&t=sMSz2bBXXwXZOMCK-1"
             target="_blank"
@@ -123,10 +123,11 @@
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | CSS | Typescript</li>
-          <li>ライブラリ：React</li>
-          <li>フレームワーク：Next.js | Tailwind CSS</li>
+          <li>ライブラリ：React | Tailwind CSS | Chakra UI</li>
+          <li>フレームワーク：Next.js</li>
           <li>外部API：Google Book API</li>
           <li>DB：Firestore</li>
+          <li>ストレージ：Cloud Storage for Firebase</li>
           <li>認証：Firebase Authentication</li>
           <li>テスト：Jest | React Testing Library</li>
           <li>デザインツール：figma</li>
