--- a/products/homete.html
+++ b/products/homete.html
@@ -83,7 +83,7 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>
-          タスク管理アプリHomete!は、タスクを完了するとAIが褒めてくれるアプリです。
+          タスク管理アプリHomete!は、タスクを完了するとAIが褒めてくれるアプリです。<br />
           アプリデザインから作成し、figmaを使用してデザインカンプを作成しました。
         </p>
         <!-- <p>
@@ -109,7 +109,7 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">デザイン</h2>
         <p>
-          figmaデザインは<a
+          figmaデザインと画面遷移図は<a
             class="p-products__detail-link"
             href="https://www.figma.com/file/erDDYMYu8kURiRxqXTKvhO/Homete!?type=design&node-id=0%3A1&mode=design&t=QPF4IbiA4wtBIYmI-1"
             target="_blank"
@@ -122,9 +122,9 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
-          <li>使用言語：HTML | CSS | Typescript</li>
+          <li>使用言語：HTML | SCSS | Typescript</li>
           <li>ライブラリ：React</li>
-          <li>フレームワーク：Next.js | Tailwind CSS</li>
+          <li>フレームワーク：Next.js</li>
           <li>DB：Firestore</li>
           <li>認証：Firebase Authentication</li>
           <li>テスト：Jest | React Testing Library</li>
